<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/reports"
        android:title="@string/reports"
        android:icon="@drawable/baseline_construction_24"/>

    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/baseline_notifications_active_24"/>

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/baseline_manage_accounts_24"/>


</menu>